# map2model_cpp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  publish_conda.yml  pypi.yml
conda/: meta.yaml
model-test/output/: Parfile  graph_all_.gml
model-test/tmp/: faults.csv  geology.csv  mindep.csv  structure.csv
src/: data_reader.cpp  example.cpp  local_topology_analyzer.cpp  map2model.cpp  parameters_reader.cpp
